Text align start on reveal button to make sure it stays aligned when button is viewed on a small screen

--- a/app/assets/stylesheets/honeycrisp/molecules/_reveal.scss
+++ b/app/assets/stylesheets/honeycrisp/molecules/_reveal.scss
@@ -2,6 +2,7 @@
   @include outline;
   cursor: pointer;
   display: inline-block;
+  text-align: start;
   text-decoration: none;
   color: $color-teal-dark;
   border: 2px solid $color-teal-dark;
